[package]
name = "rs-mitm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["json", "json5", "json5_rs"] }
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
